# Smart-and-Connected-Systems-GROUP-projects

./: .editorconfig  .gitignore  README.md
quest-0/Team-15/: dow-stock.txt  weather.txt
quest-1/: report.md
quest-1/code/: CMakeLists.txt
quest-1/code/examples/: alphanumeric_display_main.c  servo_main.c
quest-1/code/main/: CMakeLists.txt  retro_clock.h  retro_clock_display.c  retro_clock_hands.c  retro_clock_io.c  retro_clock_main.c  retro_clock_timing.c
quest-1/code/main/lib/: alphanumeric_display.c  alphanumeric_display.h  console_io.c  console_io.h  servo.c  servo.h
quest-1/code/specs/: clock_outputs.md  console_io.md
quest-1/specs/: clock_outputs.md  console_io.md  overview.md  time_keeping.md
quest-2/: report.md
quest-2/code/: .gitignore  README.md
quest-2/code/firmware/: CMakeLists.txt  sdkconfig
quest-2/code/server/: charts.js  generate_sensor_data.js  index.html  index.js  monitor.js  package-lock.json  package.json
quest-3/: report.md
quest-3/code/: README.md  server.js
quest-3/code/firmware/: CMakeLists.txt  Makefile  wearable.h  wearable_main.c
quest-3/code/web/: README.md  package-lock.json  package.json  server.js
quest-3/images/: wiring_diagram.fzz
quest-4/: report.md
quest-4/code/: README.md
quest-4/code/web/: commands.js  index.html  package-lock.json  package.json
quest-5/: report.md
quest-5/code/: .gitignore  README.md
quest-5/code/security_hub/: CMakeLists.txt
quest-5/code/webserver/: api.md  createUser.js  database.js  deploy.sh  index.js  package-lock.json  (+2 more)
quest-6/: report.md
quest-6/code/: README.md
(+104 files in other folders)
